eserde/tests/compile_fail/default_unimplemented.rs
#[derive(eserde::Deserialize)]
struct Foo {
    #[serde(default)]
    field: NoDefault,
}

#[derive(eserde::Deserialize)]
struct NoDefault;

fn main() {}
